[gd_scene load_steps=11 format=3 uid="uid://bdfonhvuuib46"]

[ext_resource type="FontFile" uid="uid://v0dvnefqf7lq" path="res://assets/ui/Font/kenvector_future_thin.ttf" id="1_k6t01"]
[ext_resource type="Script" path="res://scenes/reconnect/reconnect.gd" id="1_s74yb"]
[ext_resource type="LabelSettings" uid="uid://c8sdithnhuqdc" path="res://assets/button_label.tres" id="3_758gf"]
[ext_resource type="Texture2D" uid="uid://cbxi5xursb4qi" path="res://assets/ui/PNG/green_button05.png" id="3_o11fl"]
[ext_resource type="Texture2D" uid="uid://5mdw5vqvh0k7" path="res://assets/ui/PNG/green_button13.png" id="4_4u5ib"]
[ext_resource type="Texture2D" uid="uid://dya2h5f5tbe8x" path="res://assets/ui/PNG/red_button12.png" id="6_xxytv"]
[ext_resource type="PackedScene" uid="uid://dw21b7rva1oqd" path="res://scenes/spinner/spinner.tscn" id="6_yjodh"]
[ext_resource type="Texture2D" uid="uid://blnahmsuiwned" path="res://assets/ui/PNG/red_button10.png" id="7_u5ymq"]

[sub_resource type="LabelSettings" id="LabelSettings_pi5gv"]
font = ExtResource("1_k6t01")
font_size = 40
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_d1q3s"]
font = ExtResource("1_k6t01")
font_size = 30
font_color = Color(0, 0, 0, 1)

[node name="Reconnect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_s74yb")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -62.5
offset_right = 250.0
offset_bottom = 62.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="ReconnectionMessage" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "There is a running game session

Would You Like To Rejoin It ?


"
label_settings = SubResource("LabelSettings_pi5gv")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Sure" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 125)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_o11fl")
texture_pressed = ExtResource("4_4u5ib")
stretch_mode = 0

[node name="Sure Label" type="Label" parent="VBoxContainer/Sure"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "Sure
"
label_settings = ExtResource("3_758gf")

[node name="NoThanks" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(500, 125)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("6_xxytv")
texture_pressed = ExtResource("7_u5ymq")
stretch_mode = 0

[node name="NoThanks" type="Label" parent="VBoxContainer/NoThanks"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
text = "No Thanks
"
label_settings = ExtResource("3_758gf")

[node name="MessageContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -126.0
offset_top = -250.0
offset_right = 126.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/margin_bottom = 250

[node name="ProgressSpinner" parent="MessageContainer" instance=ExtResource("6_yjodh")]
visible = false
layout_mode = 2
size_flags_horizontal = 4

[node name="Message" type="Label" parent="MessageContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
label_settings = SubResource("LabelSettings_d1q3s")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Sure" to="." method="_on_sure_pressed"]
[connection signal="pressed" from="VBoxContainer/NoThanks" to="." method="_on_no_thanks_pressed"]
